tests/ui/consts/array-literal-len-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/array-literal-len-mismatch.rs:1:26
   |
LL | const NUMBERS: [u8; 3] = [10, 20];
   |                     -    ^^^^^^^^ expected an array with a size of 3, found one with a size of 2
   |                     |
   |                     help: consider specifying the actual array length: `2`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
