tests/ui/consts/array-literal-len-mismatch.rs
const NUMBERS: [u8; 3] = [10, 20];
//~^ ERROR mismatched types
//~^^ HELP consider specifying the actual array length
fn main() {}
